[gd_scene load_steps=2 format=3 uid="uid://b8r8x2p8r8n7k"]

[ext_resource type="Script" uid="uid://dqm50uvkhmy3s" path="res://scripts/main.gd" id="1_main"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_main")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.12, 0.14, 0.18, 1)

[node name="MainContent" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3

[node name="SelectedSkillHeader" type="VBoxContainer" parent="MainContent"]
layout_mode = 2

[node name="SkillName" type="Label" parent="MainContent/SelectedSkillHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Select a Skill"
horizontal_alignment = 1

[node name="SkillLevel" type="Label" parent="MainContent/SelectedSkillHeader"]
layout_mode = 2
text = "Level 1"
horizontal_alignment = 1

[node name="XPProgressBar" type="ProgressBar" parent="MainContent/SelectedSkillHeader"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
show_percentage = false

[node name="XPLabel" type="Label" parent="MainContent/SelectedSkillHeader"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0 / 83 XP"
horizontal_alignment = 1

[node name="SpeedBonusLabel" type="Label" parent="MainContent/SelectedSkillHeader"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 14
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
text = "+0% Speed Bonus"
horizontal_alignment = 1

[node name="TrainingPanel" type="PanelContainer" parent="MainContent"]
visible = false
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContent/TrainingPanel"]
layout_mode = 2

[node name="TrainingLabel" type="Label" parent="MainContent/TrainingPanel/VBoxContainer"]
layout_mode = 2
text = "Training: None"
horizontal_alignment = 1

[node name="TrainingProgressBar" type="ProgressBar" parent="MainContent/TrainingPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
show_percentage = false

[node name="TrainingTimeLabel" type="Label" parent="MainContent/TrainingPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0.0s / 0.0s"
horizontal_alignment = 1

[node name="StopButton" type="Button" parent="MainContent/TrainingPanel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
text = "Stop Training"

[node name="ActionListLabel" type="Label" parent="MainContent"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Training Methods"
horizontal_alignment = 1

[node name="ActionList" type="PanelContainer" parent="MainContent"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MainContent/ActionList"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="ActionListContent" type="VBoxContainer" parent="MainContent/ActionList/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="InventoryLabel" type="Label" parent="MainContent"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Inventory"
horizontal_alignment = 1

[node name="InventoryPanel" type="PanelContainer" parent="MainContent"]
visible = false
custom_minimum_size = Vector2(0, 150)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainContent/InventoryPanel"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MainContent/InventoryPanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="InventoryGrid" type="GridContainer" parent="MainContent/InventoryPanel/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
columns = 4

[node name="TotalStatsPanel" type="PanelContainer" parent="MainContent"]
layout_mode = 2

[node name="TotalStatsLabel" type="Label" parent="MainContent/TotalStatsPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Total Level: 3 | Total XP: 0 | Inventory Value: 0"
horizontal_alignment = 1

[node name="OfflineProgressPopup" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 58.0
offset_bottom = 58.0
theme_override_font_sizes/font_size = 24
text = "â˜°"

[node name="ChangeCharacterButton" type="Button" parent="."]
custom_minimum_size = Vector2(120, 40)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -128.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 48.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 14
text = "Change Character"

[node name="VBoxContainer" type="VBoxContainer" parent="OfflineProgressPopup"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="OfflineProgressPopup/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "Offline Progress"
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="OfflineProgressPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Welcome back!"
horizontal_alignment = 1

[node name="CloseButton" type="Button" parent="OfflineProgressPopup/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="SidebarDimOverlay" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)
mouse_filter = 0
z_index = 5

[node name="SkillSidebar" type="PanelContainer" parent="."]
visible = false
custom_minimum_size = Vector2(200, 0)
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 200.0
grow_vertical = 2
z_index = 10

[node name="ScrollContainer" type="ScrollContainer" parent="SkillSidebar"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="SidebarContent" type="VBoxContainer" parent="SkillSidebar/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PlayerHeader" type="Label" parent="SkillSidebar/ScrollContainer/SidebarContent"]
layout_mode = 2
text = "Player"
horizontal_alignment = 1

[node name="SkillsHeader" type="Label" parent="SkillSidebar/ScrollContainer/SidebarContent"]
layout_mode = 2
text = "Skills"
horizontal_alignment = 1

[node name="InfoHeader" type="Label" parent="SkillSidebar/ScrollContainer/SidebarContent"]
layout_mode = 2
text = "Info"
horizontal_alignment = 1

[connection signal="pressed" from="OfflineProgressPopup/VBoxContainer/CloseButton" to="." method="_on_close_offline_popup"]
